--- a/js/package.json
+++ b/js/package.json
@@ -15,15 +15,14 @@
     "ipywidgets"
   ],
   "scripts": {
-    "prepublish": "webpack",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 0",
     "start": "node server.js",
     "lint": "eslint --ext .js,.jsx src",
     "lint:watch": "echo -ne \"\\033]0;analysis-fe lint:watch\\007\" && esw -w --ext .js,.jsx src",
     "build:pre": "rm -rf ./dist && mkdir -p ./dist",
     "build:version": "echo \"built $(date -u)\" > ./dist/version.txt",
-    "build": "npm run build:pre && npm run build:version && webpack --config webpack-prod.config.js --progress --colors --profile",
-    "prepublish": "npm run build"
+    "build": "npm run build:pre && npm run build:version && webpack --config webpack-prod.config.js --progress --colors --profile"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
@@ -33,13 +32,17 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.23.1",
     "eslint": "1.2.1",
     "eslint-plugin-react": "3.3.0",
     "eslint-watch": "2.1.10",
+    "faker": "^3.1.0",
     "json-loader": "^0.5.4",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.14"
   },
   "dependencies": {
+    "fixed-data-table": "^0.6.0",
     "jupyter-js-widgets": "^1.1.1",
     "react": "^0.14.2",
     "react-addons-clone-with-props": "^0.14.2",
